# badder-lang

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  grammar.txt  testswatch  testwatch
.github/workflows/: ci.yml
src/: common.rs  controller.rs  grammar.txt  lexer.rs  lib.rs  parser.rs
tests/: control.rs  fortytwo.badder  mix.rs
