[package]
name = "badder_lang"
version = "0.1.0"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
indexmap = "1"
log = "0.4"
string_cache = "0.7"
single_value_channel = "1"
strsim = "0.9"
rustc-hash = "1"

[dev-dependencies]
env_logger = "0.7"
assert_matches = "1"
