[package]
name = "badder_lang"
version = "0.1.0"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
indexmap = "1"
log = "0.4"
string_cache = "0.8"
single_value_channel = "1"
strsim = "0.10"
rustc-hash = "1"

[dev-dependencies]
env_logger = "0.8"
assert_matches = "1"
